--- a/Attendance Management System/Forms/FormLogin.ar.resx
+++ b/Attendance Management System/Forms/FormLogin.ar.resx
@@ -123,7 +123,14 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBoxClose.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 12</value>
+    <value>14, 13</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="pictureBoxClose.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="pictureBoxClose.Size" type="System.Drawing.Size, System.Drawing">
+    <value>60, 55</value>
   </data>
   <data name="pictureBoxMinimize.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left</value>
@@ -215,7 +222,13 @@
 </value>
   </data>
   <data name="pictureBoxMinimize.Location" type="System.Drawing.Point, System.Drawing">
-    <value>79, 12</value>
+    <value>95, 13</value>
+  </data>
+  <data name="pictureBoxMinimize.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="pictureBoxMinimize.Size" type="System.Drawing.Size, System.Drawing">
+    <value>60, 55</value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -550,11 +563,23 @@
         763P0GfpM/XZ2gZti7ZJ26ZtZCU8IHnX/cr/D83V+eXa+2Y1AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="pictureBox1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>937, 219</value>
+  </data>
+  <data name="pictureBox1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="pictureBox1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>410, 383</value>
+  </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>506, 97</value>
+    <value>607, 106</value>
+  </data>
+  <data name="label2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>308, 50</value>
+    <value>375, 62</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
     <value>نظام إدارة الحضور</value>
@@ -563,14 +588,26 @@
   <data name="UserEmail.AutoSize" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
+  <data name="UserEmail.Location" type="System.Drawing.Point, System.Drawing">
+    <value>43, 82</value>
+  </data>
+  <data name="UserEmail.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
   <data name="UserEmail.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
   </data>
   <data name="UserEmail.Size" type="System.Drawing.Size, System.Drawing">
-    <value>425, 21</value>
+    <value>510, 23</value>
   </data>
   <data name="UserEmail.Text" xml:space="preserve">
     <value>بريدك الإلكتروني: </value>
+  </data>
+  <data name="textBoxEmail.Location" type="System.Drawing.Point, System.Drawing">
+    <value>43, 108</value>
+  </data>
+  <data name="textBoxEmail.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
   </data>
   <data name="textBoxEmail.PlaceholderText" xml:space="preserve">
     <value>بريدك الإلكترني ...</value>
@@ -578,14 +615,23 @@
   <data name="textBoxEmail.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
   </data>
+  <data name="textBoxEmail.Size" type="System.Drawing.Size, System.Drawing">
+    <value>509, 32</value>
+  </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>False</value>
+  </data>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>43, 166</value>
+  </data>
+  <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label1.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>425, 21</value>
+    <value>510, 23</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
     <value>رقمك السرى: </value>
@@ -641,7 +687,10 @@
 </value>
   </data>
   <data name="pictureBoxShow.Location" type="System.Drawing.Point, System.Drawing">
-    <value>36, 176</value>
+    <value>43, 193</value>
+  </data>
+  <data name="pictureBoxShow.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 29</value>
   </data>
   <data name="pictureBoxHide.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -830,7 +879,10 @@
 </value>
   </data>
   <data name="pictureBoxHide.Location" type="System.Drawing.Point, System.Drawing">
-    <value>36, 176</value>
+    <value>43, 193</value>
+  </data>
+  <data name="pictureBoxHide.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 29</value>
   </data>
   <data name="pictureBoxError.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -902,13 +954,16 @@
 </value>
   </data>
   <data name="pictureBoxError.Location" type="System.Drawing.Point, System.Drawing">
-    <value>527, 452</value>
+    <value>632, 495</value>
+  </data>
+  <data name="pictureBoxError.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 30</value>
   </data>
   <data name="labelInvalidUserName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>229, 458</value>
+    <value>275, 502</value>
   </data>
   <data name="labelInvalidUserName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>284, 21</value>
+    <value>301, 23</value>
   </data>
   <data name="labelInvalidUserName.Text" xml:space="preserve">
     <value>بريدك الإلكتروني او رقمك السرى غير صحيح</value>
@@ -917,10 +972,13 @@
     <value>NoControl</value>
   </data>
   <data name="buttonClear.Location" type="System.Drawing.Point, System.Drawing">
-    <value>173, 576</value>
+    <value>208, 631</value>
+  </data>
+  <data name="buttonClear.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
   </data>
   <data name="buttonClear.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 47</value>
+    <value>214, 51</value>
   </data>
   <data name="buttonClear.Text" xml:space="preserve">
     <value>تفريغ الخانات</value>
@@ -929,19 +987,31 @@
     <value>NoControl</value>
   </data>
   <data name="buttonLogin.Location" type="System.Drawing.Point, System.Drawing">
-    <value>369, 576</value>
+    <value>443, 631</value>
+  </data>
+  <data name="buttonLogin.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
   </data>
   <data name="buttonLogin.Size" type="System.Drawing.Size, System.Drawing">
-    <value>185, 47</value>
+    <value>222, 51</value>
   </data>
   <data name="buttonLogin.Text" xml:space="preserve">
     <value>تسجيل الدخول</value>
+  </data>
+  <data name="textBoxPassword.Location" type="System.Drawing.Point, System.Drawing">
+    <value>43, 193</value>
+  </data>
+  <data name="textBoxPassword.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
   </data>
   <data name="textBoxPassword.PlaceholderText" xml:space="preserve">
     <value>رقمك السرى ...</value>
   </data>
   <data name="textBoxPassword.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
+  </data>
+  <data name="textBoxPassword.Size" type="System.Drawing.Size, System.Drawing">
+    <value>509, 32</value>
   </data>
   <data name="pictureBoxSettings.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1223,16 +1293,28 @@
 </value>
   </data>
   <data name="pictureBoxSettings.Location" type="System.Drawing.Point, System.Drawing">
-    <value>157, 12</value>
+    <value>188, 13</value>
+  </data>
+  <data name="pictureBoxSettings.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="pictureBoxSettings.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 55</value>
   </data>
   <data name="labelOpenDateTime.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
   <data name="labelOpenDateTime.Location" type="System.Drawing.Point, System.Drawing">
-    <value>947, 12</value>
+    <value>1136, 13</value>
+  </data>
+  <data name="labelOpenDateTime.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="labelOpenDateTime.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
+  </data>
+  <data name="labelOpenDateTime.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 25</value>
   </data>
   <data name="labelOpenDateTime.Text" xml:space="preserve">
     <value>؟</value>
@@ -1241,10 +1323,16 @@
     <value>Top, Right</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1078, 12</value>
+    <value>1294, 13</value>
+  </data>
+  <data name="label3.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label3.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
+  </data>
+  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 25</value>
   </data>
   <data name="label3.Text" xml:space="preserve">
     <value>وقت فتح البرنامج</value>
@@ -1253,10 +1341,16 @@
     <value>Top, Right</value>
   </data>
   <data name="labelBackupIn.Location" type="System.Drawing.Point, System.Drawing">
-    <value>947, 46</value>
+    <value>1136, 50</value>
+  </data>
+  <data name="labelBackupIn.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="labelBackupIn.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
+  </data>
+  <data name="labelBackupIn.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 25</value>
   </data>
   <data name="labelBackupIn.Text" xml:space="preserve">
     <value>؟</value>
@@ -1265,13 +1359,16 @@
     <value>Top, Right</value>
   </data>
   <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1048, 46</value>
+    <value>1258, 50</value>
+  </data>
+  <data name="label5.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label5.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
   </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>130, 23</value>
+    <value>156, 25</value>
   </data>
   <data name="label5.Text" xml:space="preserve">
     <value>نسخة إحتياطيه بعد :</value>
@@ -1283,10 +1380,10 @@
     <value>NoControl</value>
   </data>
   <data name="buttonLanguage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>838, 576</value>
+    <value>1006, 631</value>
   </data>
   <data name="buttonLanguage.Size" type="System.Drawing.Size, System.Drawing">
-    <value>238, 64</value>
+    <value>286, 70</value>
   </data>
   <data name="buttonLanguage.TabIndex" type="System.Int32, mscorlib">
     <value>21</value>
@@ -1294,11 +1391,29 @@
   <data name="buttonLanguage.Text" xml:space="preserve">
     <value>Convert to English</value>
   </data>
+  <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>164, 219</value>
+  </data>
+  <data name="groupBox1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="groupBox1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
   <data name="groupBox1.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
   </data>
+  <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>614, 262</value>
+  </data>
   <data name="groupBox1.Text" xml:space="preserve">
     <value>ادخل بياناتك الشخصية,رجاءاً</value>
+  </data>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>12, 23</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>1440, 820</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1555,5 +1670,8 @@
         GhH9N8akNwJgUCBh8GvSh3T8oFW7Euv073X6Z4O2HOq0OPhnPHxZq3ZqxiOpCTyuffUx/fuYXsV7NOHH
         tBDE9d8ZopcR/n851ITJBURGvQAAAABJRU5ErkJggg==
 </value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>7, 5, 7, 5</value>
   </data>
 </root>
