--- a/Attendance Management System/Forms/StudentForm.en.resx
+++ b/Attendance Management System/Forms/StudentForm.en.resx
@@ -117,10 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="studentGrid.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Left, Right</value>
+  </data>
   <data name="teacherId.HeaderText" xml:space="preserve">
     <value>Teacher Name</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="label1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
@@ -128,11 +131,17 @@
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>392, 192</value>
   </data>
+  <data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>TopLeft</value>
+  </data>
   <data name="labelName.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
   <data name="labelName.Location" type="System.Drawing.Point, System.Drawing">
     <value>611, 198</value>
+  </data>
+  <data name="labelName.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>TopLeft</value>
   </data>
   <data name="butReport.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -149,7 +158,7 @@
   <data name="picLogOut.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAGE+SURBVHhe7d0H
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAGE+SURBVHhe7d0H
         lFTl/T7wbN9lG7uwS4eFZem99w4LLL333nvvFrCBDRAUuyAgIKhIEwFFMdEkGhMTYzSxpleTX9REY/T7
         v+/kvwrLs7O3zrx35nnO+ZzjQZj7ztw78z5z55bvMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzD
         MAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzDMAzD
@@ -569,16 +578,16 @@
 </value>
   </data>
   <data name="picLogOut.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 847</value>
+    <value>3, 993</value>
   </data>
   <data name="picLogOut.Size" type="System.Drawing.Size, System.Drawing">
-    <value>64, 49</value>
+    <value>10, 10</value>
   </data>
-  <data name="picLogOut.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
-    <value>Zoom</value>
+  <data name="panelCourses.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 43</value>
   </data>
   <data name="panelCourses.Size" type="System.Drawing.Size, System.Drawing">
-    <value>303, 992</value>
+    <value>303, 1006</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="labTimeDate.AutoSize" type="System.Boolean, mscorlib">
@@ -592,6 +601,15 @@
   </data>
   <data name="labTimeDate.Text" xml:space="preserve">
     <value>Date</value>
+  </data>
+  <data name="pictureBoxMinm.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1295, 3</value>
+  </data>
+  <data name="pictureBoxClose.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1340, 3</value>
+  </data>
+  <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1384, 51</value>
   </data>
   <data name="$this.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>No</value>
